bk_ida/gccida/c3/mark_referenced_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1154:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1180:81: error: use of undeclared identifier 'xmm'
v22 = _mm_add_epi32( _mm_shuffle_epi32( _mm_cvtsi32_si128( v17), 80), ( __m128i)xmm*(short *)0x65AE30); 
                                                                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1182:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v23 = ( __m128d)referenced_regs; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1185:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1186:42: error: use of undeclared identifier 'xmm'
v27 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE40); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1188:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v29 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1191:53: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v30 = _mm_unpacklo_epi32( _mm_add_epi32( v24, v22), ( __m128i)0LL); 
                                                    ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1193:53: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v32 = _mm_unpacklo_epi32( _mm_add_epi32( v25, v22), ( __m128i)0LL); 
                                                    ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1194:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v31.m128i_i64[0] = si128.m128i_i64[0] << v30.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1194:25: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v31.m128i_i64[0] = si128.m128i_i64[0] << v30.m128i_i8[0]; 
                   ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1194:45: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v31.m128i_i64[0] = si128.m128i_i64[0] << v30.m128i_i8[0]; 
                                         ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1197:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v33.m128d_f64[0] = si128.m128i_i64[0] << v32.m128i_i8[0]; 
             ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1197:38: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v33.m128d_f64[0] = si128.m128i_i64[0] << v32.m128i_i8[0]; 
                                ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1197:58: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v33.m128d_f64[0] = si128.m128i_i64[0] << v32.m128i_i8[0]; 
                                                      ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/caller-save.c:1204:54: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v18 = _mm_or_si128( _mm_shuffle_epi32( v34, 78), v34).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_referenced_regs/src/obj/caller-save.o] Error 1
